--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.2",
@@ -23,8 +25,10 @@
   },
   "dependencies": {
     "material-ui": "^0.17.4",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-flexbox-grid": "^1.0.2",
     "react-tap-event-plugin": "^2.0.1"
   }
 }
