--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-flexbox-grid": "^1.0.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-redux": "^5.0.4",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0"
   }
 }
