Added actual data retrieval from the API.
Added skeleton for error processing.

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-flexbox-grid": "^1.0.2",
+    "react-materialui-notifications": "^0.4.1",
     "react-redux": "^5.0.4",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
