--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "material-ui": "^0.17.4",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
