--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "sprintf-js": "^1.1.1",
     "whatwg-fetch": "^2.0.3"
   }
 }
