--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "material-ui": "^0.17.4",
+    "material-ui-chip-input": "^0.15.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
