Main UI switched from tabs to react-router.

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "material-ui": "^0.17.4",
+    "material-ui": "^0.20.0",
     "material-ui-chip-input": "^0.15.0",
-    "material-ui-pagination": "^1.0.4",
+    "material-ui-pagination": "^1.1.7",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
@@ -40,6 +40,7 @@
     "react-flexbox-grid": "^1.0.2",
     "react-materialui-notifications": "^0.4.1",
     "react-redux": "^5.0.4",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
