--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-flexbox-grid": "^1.0.2",
+    "react-notification-system": "^0.2.17",
     "react-redux": "^5.0.4",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-tap-event-plugin": "^2.0.1",
