--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^16.3.2",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.3.3",
     "react-flexbox-grid": "^1.0.2",
     "react-notification-system": "^0.2.17",
