--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-notification-system": "^0.2.17",
     "react-redux": "^5.0.4",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-spinners": "^0.4.4",
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
