--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^5.0.4",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-spinners": "^0.4.4",
+    "react-sweet-progress": "^1.1.2",
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
