--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "@material-ui/core": "^1.5.0",
+    "@material-ui/icons": "^2.0.2",
     "jquery": "^3.2.1",
     "material-ui": "^0.20.0",
-    "material-ui-chip-input": "^0.15.0",
+    "material-ui-chip-input": "^0.19.0",
     "material-ui-pagination": "^1.1.7",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
