--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.5.8",
     "react": "^16.3.2",
     "react-circular-progressbar": "^1.0.0",
+    "react-date-picker": "^6.11.3",
     "react-dom": "^16.3.3",
     "react-flexbox-grid": "^1.0.2",
     "react-notification-system": "^0.2.17",
@@ -53,6 +54,7 @@
     "react-spinners": "^0.4.4",
     "react-sweet-progress": "^1.1.2",
     "react-tap-event-plugin": "^3.0.3",
+    "react-time-picker": "^2.5.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "sprintf-js": "^1.1.1",
