--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:alpine
+FROM nginx:stable-alpine
 LABEL Description="MDG web UI server image"
 ADD dist.tar.gz /usr/share/nginx/html
 COPY default.conf /etc/nginx/conf.d/default.conf
