--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@material-ui/icons": "^3.0.1",
     "jquery": "^3.2.1",
     "material-ui-chip-input": "^v1.0.0-beta.6",
+    "mathjs": "^5.2.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "^16.3.2",
