--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "highcharts": "^6.2.0",
+    "highcharts-react-official": "^2.0.0",
     "jquery": "^3.2.1",
     "material-ui-chip-input": "^v1.0.0-beta.6",
     "mathjs": "^5.2.0",
