--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "highcharts-react-official": "^2.0.0",
     "jquery": "^3.2.1",
     "material-ui-chip-input": "^v1.0.0-beta.6",
+    "material-ui-treeview": "^3.2.0",
     "mathjs": "^5.2.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
