--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/polyfill": "^7.4.0",
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "connected-react-router": "^6.3.2",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^2.0.0",
     "jquery": "^3.2.1",
@@ -67,12 +68,11 @@
     "react-dom": "^16.3.3",
     "react-flexbox-grid": "^1.0.2",
     "react-notification-system": "^0.2.17",
-    "react-redux": "^5.0.4",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "react-redux": "^6.0.1",
     "react-spinners": "^0.4.4",
     "react-sweet-progress": "^1.1.2",
     "react-time-picker": "^2.5.2",
-    "redux": "^3.6.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "sprintf-js": "^1.1.1",
     "whatwg-fetch": "^2.0.3"
