--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "connected-react-router": "^6.3.2",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^2.0.0",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.2.1",
     "material-ui-chip-input": "^v1.0.0-beta.6",
     "material-ui-treeview": "^3.2.0",
