--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
     "connected-react-router": "^6.3.2",
+    "formik": "^1.5.1",
+    "formik-material-ui": "0.0.16",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^2.0.0",
     "immutable": "^4.0.0-rc.12",
@@ -76,6 +78,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "sprintf-js": "^1.1.1",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "yup": "^0.27.0"
   }
 }
