--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "material-ui-treeview": "^3.2.0",
     "mathjs": "^5.2.0",
     "moment": "^2.18.1",
+    "npm": "^6.9.0",
     "prop-types": "^15.5.8",
     "react": "^16.3.2",
     "react-circular-progressbar": "^1.0.0",
