Replaced ChipInput with ReactSelect

--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "highcharts-react-official": "^2.0.0",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.2.1",
-    "material-ui-chip-input": "^v1.0.0-beta.6",
     "material-ui-treeview": "^3.2.0",
     "mathjs": "^5.2.0",
     "moment": "^2.18.1",
@@ -73,6 +72,7 @@
     "react-flexbox-grid": "^2.1.2",
     "react-notification-system": "^0.2.17",
     "react-redux": "^6.0.1",
+    "react-select": "^2.4.3",
     "react-spinners": "^0.4.4",
     "react-sweet-progress": "^1.1.2",
     "react-time-picker": "^3.5.1",
