--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
-    "@material-ui/core": "^3.1.2",
+    "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.1",
     "connected-react-router": "^6.3.2",
     "formik": "^1.5.1",
@@ -79,6 +79,7 @@
     "react-time-picker": "^3.5.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "sprintf-js": "^1.1.1",
     "whatwg-fetch": "^3.0.0",
     "yup": "^0.27.0"
