--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-emotion": "~10.0.14",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
     "eslint": "^6.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.29.6",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-cli": "^3.3.0",
